--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
 		<!-- Navigation -->
 		<nav id="nav">
 
-			<a href="#"><div class="navButton dNone navButtonHere"><i class="fas fa-home"></i></div></a>
-			<a href="#"><div class="navButton dNone">2</div></a>
-			<a href="#"><div class="navButton dNone">3</div></a>
-			<a href="#"><div class="navButton dNone">4</div></a>
-			<a href="#"><div class="navButton dNone">5</div></a>
-			<a href="#"><div class="navButton dNone">6</div></a>
+			<a href="#"><div class="navButton dFlex fadeIn navButtonHere"><i class="fas fa-home"></i></div></a>
+			<a href="#"><div class="navButton dFlex fadeInTwo">2</div></a>
+			<a href="#"><div class="navButton dFlex fadeInThree">3</div></a>
+			<a href="#"><div class="navButton dFlex fadeInFour">4</div></a>
+			<a href="#"><div class="navButton dFlex fadeInFive">5</div></a>
+			<a href="#"><div class="navButton dFlex fadeInSix">6</div></a>
 			
 		</nav>
 
@@ -45,9 +45,13 @@
 		<!-- Main -->
 		<main id="mainOne">
 
-			<p id="introTextSm">Everyone has a</p>
+			<p id="introTextSm" class="dBlock">Everyone has a</p>
 
-			<p id="introTextLg">Blindsp&nbsp; &nbsp;t</p>
+			<p id="introTextLg" class="dBlock">Blindsp&nbsp; &nbsp;t</p>
+
+			<p id="scene2Text" class="dNone">This simple exercise could help save a life</p>
+
+			<button id="scene2Button" class="dNone">Try</button>
 
 
 			<!-- PAGE 1 -->
