--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 
 		<!-- Navigation -->
-		<nav id="nav">
+		<nav id="nav" class="dNone">
 
 			<a href="#"><div class="navButton dFlex fadeIn navButtonHere"><i class="fas fa-home"></i></div></a>
 			<a href="#"><div class="navButton dFlex fadeInTwo">2</div></a>
@@ -40,6 +40,17 @@
 			<a href="#"><div class="navButton dFlex fadeInSix">6</div></a>
 			
 		</nav>
+
+		<div id="mouse">
+
+			<p>ZOOM</p>
+			<p>rotate</p>
+			<img src="images/mouse.svg">
+			<p>pan</p>
+
+		</div>
+
+		<img src="">
 
 
 		<!-- Main -->
