add mouse directions

--- a/index.html
+++ b/index.html
@@ -43,14 +43,16 @@
 
 		<div id="mouse">
 
-			<p>ZOOM</p>
-			<p>rotate</p>
-			<img src="images/mouse.svg">
-			<p>pan</p>
+			<p id="zoom">ZOOM</p>
+
+			<div id="innerMouseDiv">
+				<p id="rotate">rotate</p>
+				<img id="imgMouse" src="images/mouse.svg">
+				<p id="pan">pan</p>				
+			</div>
+
 
 		</div>
-
-		<img src="">
 
 
 		<!-- Main -->
