--- a/index.html
+++ b/index.html
@@ -30,18 +30,18 @@
 
 
 		<!-- Navigation -->
-		<nav id="nav" class="dNone">
+		<nav id="nav">
 
-			<a href="#"><div class="navButton dFlex fadeIn navButtonHere"><i class="fas fa-home"></i></div></a>
-			<a href="#"><div class="navButton dFlex fadeInTwo">2</div></a>
-			<a href="#"><div class="navButton dFlex fadeInThree">3</div></a>
-			<a href="#"><div class="navButton dFlex fadeInFour">4</div></a>
-			<a href="#"><div class="navButton dFlex fadeInFive">5</div></a>
-			<a href="#"><div class="navButton dFlex fadeInSix">6</div></a>
+			<a href="#"><div class="navButton dNone navButtonHere"><i class="fas fa-home"></i></div></a>
+			<a href="#"><div class="navButton dNone ">2</div></a>
+			<a href="#"><div class="navButton dNone ">3</div></a>
+			<a href="#"><div class="navButton dNone ">4</div></a>
+			<a href="#"><div class="navButton dNone ">5</div></a>
+			<a href="#"><div class="navButton dNone ">6</div></a>
 			
 		</nav>
 
-		<div id="mouse">
+		<div id="mouse" class="fadeIn">
 
 			<p id="zoom">ZOOM</p>
 
