--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 			
 		</nav>
 
-		<div id="mouse" class="fadeIn">
+		<div id="mouse" class="dFlex fadeInThree">
 
 			<p id="zoom">ZOOM</p>
 
-			<div id="innerMouseDiv">
+			<div id="innerMouseDiv" class="dFlex">
 				<p id="rotate">rotate</p>
 				<img id="imgMouse" src="images/mouse.svg">
 				<p id="pan">pan</p>				
