--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			
 		</nav>
 
-		<div id="mouse" class="dFlex fadeInThree">
+		<div id="mouse" class="dFlex fadeInSix">
 
 			<p id="zoom">ZOOM</p>
 
