--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<meta name="description" content="Blind Point provides traffic safety knowledge about blind spots.">
 
 	<!-- <meta name="apple-mobile-web-app-capable" content="yes" /> -->
-	
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+
+	<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-9ralMzdK1QYsk4yBY680hmsb4/hJ98xK3w0TIaJ3ll4POWpWUYaA2bRjGGujGT8w" crossorigin="anonymous">
 
 	<link rel="stylesheet" href="https://use.typekit.net/ppb8gld.css">
 
@@ -124,9 +124,18 @@
 			<a href="#" id="bigI" class="visHidden">
 				<div>
 					<h1 class="">
-						Instructions
+						Is the intersection clear?
 					</h1>
-					<i class="fas fa-info-circle fa-lg"></i>				
+					<!-- <i class="fas fa-info-circle fa-lg"></i> -->	
+
+					<p>Use your keyoboards right and left arrows to look left and right</p>	
+
+					<div>
+						<i class="fal fa-arrow-left"></i>
+						<i class="fal fa-arrow-right"></i>
+
+					</div>	
+					<p>Use your keyboards <em>W</em> key to move forwards when you're ready.</p>	
 				</div>
 			</a>
 			
