--- a/index.html
+++ b/index.html
@@ -116,31 +116,44 @@
 
 		</main>
 
-
 		<main id="mainThree">
-			<!-- PAGE 3 -->	
+			<a href="#" id="closeInstruct">
+				<i class="fal fa-times-circle fa-2x" style="position: absolute; top: 20px; right:20px;"></i>
+			</a>
+			<h1 class="" style="    background-color: #545454;
+    width: 80%;
+    text-align: center;
+    padding: 1rem 0.5rem;">
+				Is the intersection clear?
+				</h1><div style="
+				color: white;
+				text-align: center;
+				">
+
+				<!-- <i class="fas fa-info-circle fa-lg"></i> -->	
+
+				<p>Keyboard arrows to look right and left</p>	
+
+				<div>
+					<i class="fal fa-arrow-left fa-5x" style="
+					margin-right: 1rem;
+					"></i>
+					<i class="fal fa-arrow-right fa-5x" style="
+					margin-left: 1rem;
+					"></i>
+
+				</div>	
+				<p>Use the <span style="font-size: 3rem;"><em>W</em></span> key to move forwards when you're ready.</p>	
+			</div><!-- PAGE 3 -->	
 
 			<!-- PAGE 3 STUFF -->
-			<a href="#" id="bigI" class="visHidden">
-				<div>
-					<h1 class="">
-						Is the intersection clear?
-					</h1>
-					<!-- <i class="fas fa-info-circle fa-lg"></i> -->	
-
-					<p>Use your keyoboards right and left arrows to look left and right</p>	
-
-					<div>
-						<i class="fal fa-arrow-left"></i>
-						<i class="fal fa-arrow-right"></i>
-
-					</div>	
-					<p>Use your keyboards <em>W</em> key to move forwards when you're ready.</p>	
-				</div>
+			<a href="#" id="bigI" class="visHidden" style="visibility: inherit; opacity: 1;">
+				
 			</a>
 			
 
 		</main>
+
 		<main id="mainFour">
 
 			<!-- PAGE 4 -->
