--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
 		</main>
 
-		<main id="mainThree">
+		<main id="mainThree" class="visHidden">
 			<a href="#" id="closeInstruct">
 				<i class="fal fa-times-circle fa-2x" style="position: absolute; top: 20px; right:20px;"></i>
 			</a>
