updates to markup and js

--- a/index.html
+++ b/index.html
@@ -57,16 +57,16 @@
 		<main id="mainTwo">
 			<!-- PAGE 2 -->
 			<div id="wantToTry" class="visHidden">
-				<h1 class="fadeIn">This simple exercise could help save a life</h1>
-				<h4 class="fadeIn">Want to try?</h4>
-				<div>
+				<h1 class="fadeIn" style="font-family:'quatro', sans-serif;">Do you drive?</h1>
+				<h4 class="fadeIn">Knowing where your blindspots are could save a life</h4>
+<!-- 				<div>
 					<a href="#" id="noButton" onclick="chooseNo()">
 						<button class="fadeInTwo noButton">No</button>
 					</a>
 					<a href="#">
 						<button id="sayYes" class="fadeInTwo">Yes</button>
 					</a>
-				</div>				
+				</div> -->				
 			</div>	
 
 			<!-- PAGE 2 Sorry, No -->
@@ -120,10 +120,10 @@
 			<a href="#" id="closeInstruct">
 				<i class="fal fa-times-circle fa-2x" style="position: absolute; top: 20px; right:20px;"></i>
 			</a>
-			<h1 class="" style="    background-color: #545454;
-    width: 80%;
-    text-align: center;
-    padding: 1rem 0.5rem;">
+			<h1 class="" style="background-color: #545454;
+								    width: 80%;
+								    text-align: center;
+								    padding: 1rem 0.5rem;">
 				Is the intersection clear?
 				</h1><div style="
 				color: white;
