--- a/index.html
+++ b/index.html
@@ -137,11 +137,11 @@
 			width: 50%;
 			">			
 			<div style="display:flex;justify-content: center;align-items: center;width: 80%;height: 50vh;flex-wrap: wrap;">	
-				
+
 
 				<div style="width: 50%;display: flex;align-items: center;justify-content: center;">
 
-					<img src="images/arrow-up.svg" alt="arrow up" style="box-shadow: 5px 5px 10px rgba(0,0,0,0.5);z-index: 30;">
+					<img src="images/arrow-up.svg" alt="arrow up" style="z-index: 30;">
 					<div style="background-color: #d0c287;color: #3c3634;border-radius: 25px;margin-left: -20px;width: 35%;">
 						<p style="
 						margin-left: 40px;
@@ -155,7 +155,7 @@
 
 				<div style="width: 50%;display: flex;align-items: center;justify-content: center;">
 
-					<img src="images/arrow-left.svg" alt="arrow left" style="box-shadow: 5px 5px 10px rgba(0,0,0,0.5);z-index: 30;">
+					<img src="images/arrow-left.svg" alt="arrow left" style="z-index: 30;">
 					<div style="background-color: #d0c287;color: #3c3634;border-radius: 25px;margin-left: -20px;width: 35%;">
 						<p style="
 						margin-left: 40px;
@@ -169,7 +169,7 @@
 
 				<div style="width: 50%; display: flex; align-items: center; justify-content: center;">
 
-					<img src="images/arrow-down.svg" alt="arrow down" style="box-shadow: 5px 5px 10px rgba(0,0,0,0.5);z-index: 30;">
+					<img src="images/arrow-down.svg" alt="arrow down" style="z-index: 30;">
 					<div style="background-color: #d0c287;color: #3c3634;border-radius: 25px;margin-left: -20px;width: 35%;">
 						<p style="
 						margin-left: 40px;
@@ -183,7 +183,7 @@
 
 				<div style="width: 50%; display: flex; align-items: center; justify-content: center;">
 
-					<img src="images/arrow-right.svg" alt="arrow right" style="box-shadow: 5px 5px 10px rgba(0,0,0,0.5);z-index: 30;">
+					<img src="images/arrow-right.svg" alt="arrow right" style="z-index: 30;">
 					<div style="background-color: #d0c287;color: #3c3634;border-radius: 25px;margin-left: -20px;width: 35%;">
 						<p style="
 						margin-left: 40px;
