--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 			<p style="font-size: small;color: white;">Keyboard Controls</p>	
 
 		</main>
-		<main id="mainFour">
+		<main id="mainFour" class="visHidden">
 
 			<!-- PAGE 4 -->
 			<div id="wantToTry4" class="visHidden">
@@ -216,7 +216,7 @@
 			
 		</main>
 
-		<main id="mainFive">
+		<main id="mainFive" class="visHidden">
 
 			<!-- PAGE 5 -->
 			<div id="wantToTry5" class="visHidden">
