--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
 		</main>
 
-		<main id="mainThree" class="visHidden" style="visibility: inherit; opacity: 1;">
+		<main id="mainThree" class="visHidden">
 			<a href="#" id="closeInstruct" style="background-color: red;">
 				<i class="fal fa-times-circle fa-2x" style="position: absolute; top: 20px; right:20px; z-index: 60;"></i>
 			</a>
