--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		</main>	 
 		<!-- End Main -->
 
-		<main id="mainTwo">
+		<main id="mainTwo" class="visHidden">
 			<!-- PAGE 2 -->
 			<div id="wantToTry" class="visHidden">
 				<h1 class="fadeIn" style="font-family:'quatro', sans-serif;">Do you drive?</h1>
@@ -234,7 +234,7 @@
 			
 		</main>
 
-		<main id="mainSix">
+		<main id="mainSix" class="visHidden">
 
 
 			<!-- PAGE 6 STUFF -->
