--- a/index.html
+++ b/index.html
@@ -354,6 +354,9 @@
 	<script src="javascript/threejs/GLTFLoader.js"></script>
 	<script src="javascript/threejs/SVGLoader.js"></script>
 
+
+
+
 	<!-- Greensock -->
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
@@ -361,6 +364,10 @@
 
 	<script src="javascript/myGreensock.js"></script>
 	<script src="javascript/3d.js"></script>
+
+	<!-- Tween JS -->
+
+	<script src="javascript/tween.js"></script>
 		
 </body>
 </html>
