--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
 
 	<div id="grid" class="gridContainer">
 
+		<div id="overlay">
+
+			<div id="spinner">
+				
+			</div>
+			
+		</div>
+
 		<!-- Suggest Landscape on Mobile -->
 <!-- 		<div id="goLandscape">
 			<h1>Turn your device to landscape</h1>
