--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 		<nav id="nav">
 
 			<a href="#"><div class="navButton dFlex navButtonHere"><i class="fas fa-home"></i></div></a>
+			<a href="#"><div class="navButton dFlex">1.5</div></a>
 			<a href="#"><div class="navButton dFlex">2</div></a>
 			<a href="#"><div class="navButton dFlex">3</div></a>
 			<a href="#"><div class="navButton dFlex">4</div></a>
@@ -61,6 +62,36 @@
 
 		</main>	 
 		<!-- End Main -->
+
+		<main id="mainHalf" style="
+
+			grid-column: 3 / 9; 
+			grid-row: 6 / 7;
+			z-index: 20;
+			display: flex;
+			justify-content: space-around;
+			align-items: center;
+			background-color: rgba(23, 13, 123, 0.5);
+
+		">
+
+			<div id="optionOne" class="optionBorder">
+
+				<a href="#">
+					<h3>See how blindspots work</h3>
+				</a>
+				
+			</div>
+
+			<div id="optionTwo">
+
+				<a href="#">
+					<h3>See vehcile blindspots in action</h3>
+				</a>
+
+			</div>
+			
+		</main>
 
 		<main id="mainTwo" class="visHidden">
 			<!-- PAGE 2 -->
