--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<nav id="nav">
 
 			<a href="#"><div class="navButton dFlex navButtonHere"><i class="fas fa-home"></i></div></a>
-			<a href="#"><div class="navButton dFlex">1.5</div></a>
+			<!-- <a href="#"><div class="navButton dFlex">1.5</div></a> -->
 			<a href="#"><div class="navButton dFlex">2</div></a>
 			<a href="#"><div class="navButton dFlex">3</div></a>
 			<a href="#"><div class="navButton dFlex">4</div></a>
@@ -62,7 +62,7 @@
 
 		</main>	 
 		<!-- End Main -->
-
+<!-- 
 		<main id="mainHalf" style="
 
 			grid-column: 3 / 9; 
@@ -83,7 +83,7 @@
 				
 			</div>
 
-			<div id="optionTwo">
+			<div id="optionTwo" class="optionBorder">
 
 				<a href="#">
 					<h3>See vehcile blindspots in action</h3>
@@ -91,7 +91,7 @@
 
 			</div>
 			
-		</main>
+		</main> -->
 
 		<main id="mainTwo" class="visHidden">
 			<!-- PAGE 2 -->
