--- a/index.html
+++ b/index.html
@@ -404,6 +404,14 @@
 	<!-- Tween JS -->
 
 	<script src="javascript/tween.js"></script>
+
+	<script>
+		document.getElementsByTagName('canvas')[0].addEventListener('load', function(){
+			document.getElementById("overlay").style.display = 'none';
+		});
+
+
+	</script>
 		
 </body>
 </html>
