--- a/index.html
+++ b/index.html
@@ -406,7 +406,9 @@
 	<script src="javascript/tween.js"></script>
 
 	<script>
-		document.getElementsByTagName('canvas')[0].addEventListener('load', function(){
+
+
+		window.addEventListener('load', function(){
 			document.getElementById("overlay").style.display = 'none';
 		});
 
