--- a/index.html
+++ b/index.html
@@ -408,9 +408,9 @@
 	<script>
 
 
-		window.addEventListener('load', function(){
-			document.getElementById("overlay").style.display = 'none';
-		});
+
+
+		document.getElementById('overlay').innerHTML = blaze;
 
 
 	</script>
