--- a/index.html
+++ b/index.html
@@ -21,13 +21,9 @@
 
 	<div id="grid" class="gridContainer">
 
-		<div id="overlay">
+		<div id="overlay">	
 
-			<div id="spinner">
-
-				<h2>loading</h2>
-				
-			</div>
+			<div id="loader"></div>
 			
 		</div>
 
@@ -405,17 +401,6 @@
 
 	<script src="javascript/tween.js"></script>
 
-	<script>
 
-
-		window.addEventListener('load', function(){
-			document.getElementById("overlay").style.display = 'none';
-		});
-
-		// document.getElementById('overlay').innerHTML = blaze;
-
-
-	</script>
-		
 </body>
 </html>
