--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
 	<script src="javascript/threejs/three.js"></script>
 	<script src="javascript/threejs/OrbitControls.js"></script>
 	<script src="javascript/threejs/GLTFLoader.js"></script>
-<!-- 	<script src="javascript/threejs/SVGLoader.js"></script> -->
+	<script src="javascript/threejs/SVGLoader.js"></script>
 	<script src="javascript/threejs/LoadingManager.js"></script>
 
 
