--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
 			<p id="introTextSm" class="visVisible">Everyone has a</p>
 			<p id="introTextLg" class="visVisible">Blindsp&nbsp; &nbsp;t</p>
 
+
+			<a href="#">
+				<button id="butt1">See how blindspots work</button>
+			</a>
+
 		</main>	 
 		<!-- End Main -->
 <!-- 
