--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 
 
 		</main>	 
-		<a href="#">
-			<button id="butt1">See how blindspots work</button>
-		</a>
+		
+		<button href="#" id="butt1">See how blindspots work</button>
+		
 		<!-- End Main -->
 <!-- 
 		<main id="mainHalf" style="
