--- a/index.html
+++ b/index.html
@@ -56,8 +56,11 @@
 
 		</main>	 
 		
-		<button href="#" id="butt1">See how blindspots work</button>
+		<div id="butt1">
+
+			<button href="#">See how blindspots work</button>
 		
+		</div>
 		<!-- End Main -->
 <!-- 
 		<main id="mainHalf" style="
@@ -224,7 +227,7 @@
 
 
 
-				
+
 <!-- 				<div>
 					<a href="#" id="noButton" onclick="chooseNo()">
 						<button class="fadeInTwo noButton">No</button>
