--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
 
 		<main id="mainTwo" class="visHidden">
 
-			<a href="#" id="closeInstruct" style="background-color: red;">
+			<a href="#" class="closeInstruct">
 				<i class="fal fa-times-circle fa-2x" style="position: absolute; top: 20px; right:20px; z-index: 60;"></i>
 			</a>
 			<h1 class="" style="color: #d0c700;text-align: center;font-family: quatro, sans-serif;font-style: italic;font-weight: 900;margin-top: 10vh;">		   
 				Is the intersection clear?
 			</h1>
-			
+
 			<!-- PAGE 2 -->
 			<div id="wantToTry" class="visHidden">
 				<!-- <h1 class="fadeIn" style="font-family:'quatro', sans-serif;">Do you drive?</h1>
@@ -226,7 +226,7 @@
 		</main>
 
 		<main id="mainThree" class="visHidden">
-			<a href="#" id="closeInstruct" style="background-color: red;">
+			<a href="#" class="closeInstruct">
 				<i class="fal fa-times-circle fa-2x" style="position: absolute; top: 20px; right:20px; z-index: 60;"></i>
 			</a>
 			<h1 class="" style="color: #d0c700;text-align: center;font-family: quatro, sans-serif;font-style: italic;font-weight: 900;margin-top: 10vh;">		   
