--- a/index.html
+++ b/index.html
@@ -98,27 +98,24 @@
 			<a href="#" class="closeInstruct">
 				<i class="fal fa-times-circle fa-2x" style="position: absolute; top: 20px; right:20px; z-index: 60;"></i>
 			</a>
-			<h1 class="" style="color: #d0c700;text-align: center;font-family: quatro, sans-serif;font-style: italic;font-weight: 900;margin-top: 10vh;">		   
-				Is the intersection clear?
+			<h1 class="h1Instructions">		   
+				Instructions
 			</h1>
 
-			<!-- PAGE 2 -->
-			<div id="wantToTry" class="visHidden">
-				<!-- <h1 class="fadeIn" style="font-family:'quatro', sans-serif;">Do you drive?</h1>
-				<h4 class="fadeIn">Knowing where your blindspots are could save a life</h4> -->
 
+
+<!-- 
 				<h1 class="fadeIn" style="font-family:'quatro', sans-serif;">Instructions</h1>
 				<h4 class="fadeIn">Knowing where your blindspots are could save a life</h4>
 
 				<a href="#" id="bigI" >
 					<div>
-						<h1 class="">
+						<h1 class="h1Instructions">
 							Instructions
-						</h1>
-						<i class="fas fa-info-circle fa-lg"></i>				
+						</h1>				
 					</div>
-				</a>
-				<section id="instructions">
+				</a> -->
+<!-- 				<section id="instructions">
 
 					<div id="instructionsBG" class="insClose">
 						<div id="instructContain" class="instructCont">
@@ -219,9 +216,9 @@
 						</div>				
 					</div>
 
-				</section>
+				</section> -->
 
-			</div>	
+
 
 		</main>
 
