--- a/index.html
+++ b/index.html
@@ -223,6 +223,21 @@
 		</main>
 
 		<main id="mainThree" class="visHidden">
+
+			<h1>Want to try another?</h1>
+
+			<div>
+				<a href="#" id="noButton" onclick="chooseNo()">
+					<button class="fadeInTwo noButton">No</button>
+				</a>
+				<a href="page-6.html">
+					<button id="sayYesTwo" class="fadeInTwo">Yes</button>
+				</a>
+			</div>
+
+		</main>
+		<main id="mainFour" class="visHidden">
+
 			<a href="#" class="closeInstruct">
 				<i class="fal fa-times-circle fa-2x"></i>
 			</a>
@@ -284,35 +299,21 @@
 			<hr class="insHr">
 			<p class="fSmall white">Keyboard Controls</p>	
 
-		</main>
-		<main id="mainFour" class="visHidden">
-
-			<!-- PAGE 4 -->
-			<div id="wantToTry4" class="visHidden">
-				<h1 class="fadeIn">Last year, nearly 1.3 million people died in road crashes.</h1>
-				<a href="#" class="fadeInTwo">
-					<i id="arrow" class="fas fa-arrow-circle-right fa-3x"></i>
-				</a>
-			</div>			
+		
 			
 		</main>
 
 		<main id="mainFive" class="visHidden">
 
-			<!-- PAGE 5 -->
-			<div id="wantToTry5" class="visHidden">
-				<h1 class="fadeIn">Global Traffic Group improves traffic safety</h1>
-				<h4 class="fadeIn">Want to help?</h4>
-				<div>
-					<a href="#" id="noButton" onclick="chooseNo()">
-						<button class="fadeInTwo noButton">No</button>
-					</a>
-					<a href="page-6.html">
-						<button id="sayYesTwo" class="fadeInTwo">Yes</button>
-					</a>
-				</div>				
-			</div>		
-			
+
+			<div id="wantToTry4" class="visHidden">
+				<h1 class="fadeIn">Last year, nearly 1.3 million people died in road crashes.</h1>
+				<a href="#" class="fadeInTwo">
+					<i id="arrow" class="fas fa-arrow-circle-right fa-3x"></i>
+				</a>
+			</div>	
+
+
 		</main>
 
 		
@@ -320,6 +321,9 @@
 
 
 			<div id="share" class="visHidden">
+
+				<h1 class="fadeIn">Global Traffic Group improves traffic safety</h1>
+				<p>Here are ways you can help</p>
 
 
 				<h3>Share</h3>
