--- a/index.html
+++ b/index.html
@@ -225,11 +225,11 @@
 			<h1>Want to try another?</h1>
 
 			<div>
-				<a href="#" id="noButton" onclick="chooseNo()">
+				<a href="#" id="sayNo">
 					<button class="fadeInTwo noButton">No</button>
 				</a>
-				<a href="page-6.html">
-					<button id="sayYesTwo" class="fadeInTwo">Yes</button>
+				<a href="page-6.html" id="sayYes">
+					<button class="fadeInTwo">Yes</button>
 				</a>
 			</div>
 
