--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 				<a href="#" id="sayNo">
 					<button class="fadeInTwo noButton">No</button>
 				</a>
-				<a href="page-6.html" id="sayYes">
+				<a href="#" id="sayYes">
 					<button class="fadeInTwo">Yes</button>
 				</a>
 			</div>
