--- a/index.html
+++ b/index.html
@@ -61,6 +61,13 @@
 			<button href="#">See how blindspots work</button>
 		
 		</div>
+
+		<div id="butt2">
+
+			<button href="#">See vehicle blindspots in action</button>
+		
+		</div>
+
 		<!-- End Main -->
 <!-- 
 		<main id="mainHalf" style="
