--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 
 					<img src="images/arrow-down.svg" alt="arrow down" class="z30">
 					<div class="insDiv">
-						<p>Drive Backwards</p>
+						<p>Brake</p>
 						
 					</div>
 					
