--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 		<div id="butt2">
 
-			<button href="#">blindspots in action</button>
+			<button href="#">blindspots</button>
 		
 		</div>
 
