changed icons for info

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
 		<a href="#" id="info" class="dNone">
 
-			<i class="fas fa-info fa-2x"></i>
+			<i class="fas fa-info-circle fa-2x"></i>
 			
 		</a>
 		<a href="#" id="closeInstruct" class="dNone">
