update to styles and javascript

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 			<div id="goNext" class="dFlex">
 
 				<a href="#" id="nextPage">	
-					<button>Next Page <i id="arrow" class="fas fa-arrow-circle-right fa-3x"></i></button>
+					<button>Next Page <i class="fas fa-arrow-circle-right arrow"></i></button>
 				</a>
 
 			</div>
@@ -327,7 +327,7 @@
 			<div id="wantToTry4">
 				<h1 class="fadeIn">Last year, nearly 1.3 million people died in road crashes.</h1>
 				<a href="#" class="fadeInTwo helpUs">
-					Help us improve road safety <i id="arrow" class="fas fa-arrow-circle-right fa-3x"></i>
+					Help us improve road safety <i class="fas fa-arrow-circle-right arrow"></i>
 				</a>
 			</div>	
 
