--- a/index.html
+++ b/index.html
@@ -16,54 +16,46 @@
 	<link rel="stylesheet" type="text/css" href="styles/main.css">
 
 
-</head>
+</head>             
+
 <body>
 
 	<div id="grid" class="gridContainer">
 
 
 		<!-- Suggest Landscape on Mobile -->
-<!-- 		<div id="goLandscape">
+		<div id="goLandscape">
 			<h1>Turn your device to landscape</h1>
 			<img src="images/rotate.svg">
-		</div> -->
+		</div>
 
 
 
 		<!-- Navigation -->
-<!-- 		<nav id="nav" class="visHidden">
 
-			<a href="#"><div class="navButton dFlex navButtonHere"><i class="fas fa-home"></i></div></a>
-			<a href="#"><div class="navButton dFlex">2</div></a>
-			<a href="#"><div class="navButton dFlex">3</div></a>
-			<a href="#"><div class="navButton dFlex">4</div></a>
-			<a href="#"><div class="navButton dFlex">5</div></a>
-			
-		</nav> -->
-
-		<nav id="nav" style="">
+		<nav id="nav">
 			<a href="#">
-				<div id="home" class="navButton dFlex navButtonHere" style="">
+				<div id="home" class="navButton dFlex navButtonHere">
 					Home
 				</div>
 			</a>
 			<a href="#">
-				<div id="numOne" class="navButton dFlex" style="">
+				<div id="numOne" class="navButton dFlex">
 					 How blindspots work
 				</div>
 			</a>
 			<a href="#">
-				<div id="numTwo" class="navButton dFlex" style="">
+				<div id="numTwo" class="navButton dFlex">
 					Vehicle blindspots in action
 				</div>
 			</a>
 			<a href="#">
-				<div id="learnMore" class="navButton dFlex" style="">
+				<div id="learnMore" class="navButton dFlex">
 					Learn More
 				</div>
 			</a>
 			<a href="#">
-				<div id="contactUs" class="navButton dFlex" style="">
+				<div id="contactUs" class="navButton dFlex">
 					Contact
 				</div>
 			</a>
@@ -84,68 +76,7 @@
 
 		</main>	 
 		
-<!-- 		<div id="butt1">
-			
 
-			<button href="#" style="position: relative;"><span style="    position: absolute;
-    top: 0;
-    left: 0;
-    font-weight: 700;
-    font-size: 3rem;
-    background-color: #ffffff;
-    border-radius: 22px;
-    padding: 19px 35px;">1 </span>How blindspots work</button>
-
-		
-		</div>
-
-		<div id="butt2">
-
-			<button href="#" style="position: relative;"><span style="    position: absolute;
-    top: 0;
-    left: 0;
-    font-weight: 700;
-    font-size: 3rem;
-    background-color: #ffffff;
-    border-radius: 22px;
-    padding: 19px 35px;">2 </span>Vehicle blindspots in action</button>
-		
-		</div> -->
-
-		<!-- <button href="#" id="trigger" style="grid-column: 3 / 6;
-		grid-row: 5 / 7; z-index: 200;">trigger</button> -->
-
-		<!-- End Main -->
-<!-- 
-		<main id="mainHalf" style="
-
-			grid-column: 3 / 9; 
-			grid-row: 6 / 7;
-			z-index: 20;
-			display: flex;
-			justify-content: space-around;
-			align-items: center;
-			background-color: rgba(23, 13, 123, 0.5);
-
-		">
-
-			<div id="optionOne" class="optionBorder">
-
-				<a href="#">
-					<h3>See how blindspots work</h3>
-				</a>
-				
-			</div>
-
-			<div id="optionTwo" class="optionBorder">
-
-				<a href="#">
-					<h3>See vehcile blindspots in action</h3>
-				</a>
-
-			</div>
-			
-		</main> -->
 
 		<a href="#" id="info" class="dNone">
 
@@ -299,6 +230,36 @@
 			<p class="fSmall white">Keyboard Controls</p>		
 		</main>
 
+		<main id="mobileControls" class="dNone">
+	
+
+			<div id="arrowUp" class="dFlex" style="grid-column: 2; grid-row: 1; width: 100%; align-items:center; justify-content:center;">
+
+				<img width="75%" src="images/arrow-up.svg" alt="arrow up">
+
+			</div>
+
+			<div id="arrowLeft" class="dFlex" style="grid-column: 1; grid-row: 2; width: 100%; align-items:center; justify-content:center;">
+
+				<img width="75%" src="images/arrow-left.svg" alt="arrow left">
+
+			</div>
+
+			<div id="arrowDown" class="dFlex" style="grid-column: 2; grid-row: 3; width: 100%; align-items:center; justify-content:center;">
+
+				<img width="75%" src="images/arrow-down.svg" alt="arrow down">
+
+			</div>
+
+			<div id="arrowRight" class="dFlex" style=" grid-column: 3; grid-row: 2; width: 100%; align-items:center; justify-content:center;">
+
+				<img width="75%" src="images/arrow-right.svg" alt="arrow right">
+
+			</div>
+				
+			
+		</main>
+
 		<main id="youStopped" class="dNone">
 
 			<h1 class="h1Instructions">		   
@@ -326,7 +287,7 @@
 
 			<div id="wantToTry4">
 				<h1 class="fadeIn">Last year, nearly 1.3 million people died in road crashes.</h1>
-				<a href="#" class="fadeInTwo helpUs">
+				<a href="#" class="helpUs fadeInTwo">
 					Help us improve road safety <i class="fas fa-arrow-circle-right arrow"></i>
 				</a>
 			</div>	
@@ -335,9 +296,6 @@
 		</main>
 
 		<div id="share" class="visHidden">
-
-			<!-- <h1 class="fadeIn">Global Traffic Group improves traffic safety</h1>
-			<p>Here are ways you can help</p> -->
 
 
 			<h3>Share</h3>
@@ -443,22 +401,21 @@
 
 	</div> <!-- End Grid -->
 
+
+	<!-- Three JS -->
 	<script src="javascript/threejs/three.js"></script>
 	<script src="javascript/threejs/OrbitControls.js"></script>
 	<script src="javascript/threejs/GLTFLoader.js"></script>
 	<script src="javascript/threejs/SVGLoader.js"></script>
 
 
-
 	<!-- Greensock -->
-
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
 	<script src="javascript/gsock.js"></script>
 
-	<script src="javascript/myGreensock.js"></script>
-	<!-- Tween JS -->
 
-	<script src="javascript/tween.js"></script>	
+	<!-- My Scripts -->
+	<script src="javascript/myGreensock.js"></script>
 	<script src="javascript/3d.js"></script>
 
 
