--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 		<!-- Navigation -->
 
-		<nav id="nav">
+		<nav id="nav" class="dNone">
 			<a href="#">
 				<div id="home" class="navButton dFlex navButtonHere">
 					Home
