--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 
 			<div id="wantToTry4">
 				<h1 class="fadeIn">Last year, nearly 1.3 million people died in road crashes.</h1>
-				<a href="#" class="fadeInTwo helpUs">
+				<a href="#" class="helpUs fadeInTwo">
 					Help us improve road safety <i class="fas fa-arrow-circle-right arrow"></i>
 				</a>
 			</div>	
