--- a/index.html
+++ b/index.html
@@ -67,11 +67,12 @@
 		</nav>
 
 
-		<div id="controls" class="dNone" style="width: 100%;
-    height: 100%;
-    grid-column: 1 / 13;
-    grid-row: 1 / 11;
-    z-index: 80;">
+		<div id="controls" class="dNone" style="
+		width: 100%;
+	    height: 100%;
+	    grid-column: 1 / 13;
+	    grid-row: 1 / 11;
+	    z-index: 80;">
 
 			<div id="up" style="width: 100%; border-radius: 25px; height: 100%;background-color: red;grid-column: 6 / 8;grid-row: 1 / 2;"></div>
 			<div id="down" style="width: 100%; border-radius: 25px; height: 100%;background-color: red;grid-column: 6 / 8;grid-row: 10 / 11;"></div>
