--- a/index.html
+++ b/index.html
@@ -68,16 +68,27 @@
 
 
 		<div id="controls" class="dNone" style="
-		width: 100%;
-	    height: 100%;
-	    grid-column: 1 / 13;
-	    grid-row: 1 / 11;
-	    z-index: 80;">
+			width: 100%;
+		    height: 100%;
+		    grid-column: 1 / 4;
+		    grid-row: 8 / 11;
+		    z-index: 80;
+		    grid-template-columns: repeat(3, 1fr);
+		    grid-template-rows: repeat(3, 33%);
+	    ">
 
-			<div id="up" style="width: 100%; border-radius: 25px; height: 100%;background-color: red;grid-column: 6 / 8;grid-row: 1 / 2;"></div>
-			<div id="down" style="width: 100%; border-radius: 25px; height: 100%;background-color: red;grid-column: 6 / 8;grid-row: 10 / 11;"></div>
-			<div id="left" style="width: 100%; border-radius: 25px; height: 100%;background-color: red;grid-column: 1 / 2;grid-row: 6 / 8;"></div>	
-			<div id="right" style="width: 100%; border-radius: 25px; height: 100%;background-color: red;grid-column: 12 / 13;grid-row: 6 / 8;"></div>	
+			<div id="up" style="width: 100%; height: 100%; grid-column: 2; grid-row: 1;">
+				<img src="images/arrow-up.svg" alt="arrow up" class="z30">
+			</div>
+			<div id="down" style="width: 100%; height: 100%; grid-column: 2; grid-row: 3;">
+				<img src="images/arrow-down.svg" alt="arrow down" class="z30">
+			</div>
+			<div id="left" style="width: 100%; height: 100%; grid-column: 1; grid-row: 2;">
+				<img src="images/arrow-left.svg" alt="arrow left" class="z30">
+			</div>	
+			<div id="right" style="width: 100%; height: 100%; grid-column: 3; grid-row: 2;">
+				<img src="images/arrow-right.svg" alt="arrow right" class="z30">
+			</div>	
 
 		</div>
 
