--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
 			<img src="images/rotate.svg">
 		</div>
 
-		<div id="hamburger" class="dBlock" style="width: 100%; grid-column: 1 / 2; grid-row: 1 / 2; background-color: aqua; z-index: 100; ">
+		<div id="hamburger" class="dBlock">
 
-			<div style="width: 35px; height: 5px; background-color: black; margin: 6px 0;"></div>
-			<div style="width: 35px; height: 5px; background-color: black; margin: 6px 0;"></div>
-			<div style="width: 35px; height: 5px; background-color: black; margin: 6px 0;"></div>
-			
+			<div class="bar1"></div>
+			<div class="bar2"></div>
+			<div class="bar3"></div>
+		
 		</div>
 
-		<nav id="mobileNav" class="dNone" style="grid-column: 1 / 13; grid-row: 1 / 11; width: 100%; height: 100%; background-color: #ffe4c4a8; z-index: 90; align-items: center; justify-content: space-around; flex-direction: column;">
+<!-- 		<nav id="mobileNav" class="dNone" style="">
 			<a href="#">
 				<div id="home" class="navButton dFlex navButtonHere">
 					Home
@@ -64,29 +64,21 @@
 					Contact
 				</div>
 			</a>
-		</nav>
+		</nav> -->
 
 
-		<div id="controls" class="dNone" style="
-			width: 100%;
-		    height: 100%;
-		    grid-column: 1 / 4;
-		    grid-row: 8 / 11;
-		    z-index: 80;
-		    grid-template-columns: repeat(3, 1fr);
-		    grid-template-rows: repeat(3, 33%);
-	    ">
+		<div id="controls" class="dNone" >
 
-			<div id="up" style="width: 100%; height: 100%; grid-column: 2; grid-row: 1;">
+			<div id="up">
 				<img src="images/arrow-up.svg" alt="arrow up" class="z30">
 			</div>
-			<div id="down" style="width: 100%; height: 100%; grid-column: 2; grid-row: 3;">
+			<div id="down">
 				<img src="images/arrow-down.svg" alt="arrow down" class="z30">
 			</div>
-			<div id="left" style="width: 100%; height: 100%; grid-column: 1; grid-row: 2;">
+			<div id="left">
 				<img src="images/arrow-left.svg" alt="arrow left" class="z30">
 			</div>	
-			<div id="right" style="width: 100%; height: 100%; grid-column: 3; grid-row: 2;">
+			<div id="right">
 				<img src="images/arrow-right.svg" alt="arrow right" class="z30">
 			</div>	
 
@@ -331,7 +323,7 @@
 
 			<hr class="insHr">
 
-			<p class="white mBottom25">Your blindspot awareness prevented an accident.</p>
+			<p class="white mBottom25 success">Your blindspot awareness prevented an accident.</p>
 
 
 			<div id="goNext" class="dFlex">
