--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
 		<!-- Navigation -->
 
-		<nav id="nav" class="dNone">
+		<nav id="nav" class="regNav dNone">
 			<a href="#">
 				<div id="home" class="navButton dFlex navButtonHere">
 					Home
